# atomic

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
atomic_sync/: Dockerfile
crates/atomic-cloud/: Dockerfile
crates/atomic-core/: Cargo.toml
crates/atomic-server/: Cargo.toml
crates/atomic-server/src/: auth.rs  config.rs  db_extractor.rs  error.rs  event_bridge.rs  main.rs  mcp_auth.rs  state.rs  ws.rs
crates/atomic-server/src/mcp/: server.rs  types.rs
crates/atomic-server/src/routes/: atoms.rs  auth.rs  briefings.rs  canvas.rs  chat.rs  clustering.rs  databases.rs  embedding.rs  feeds.rs  graph.rs  import.rs  ingest.rs  mod.rs  oauth.rs  ollama.rs  search.rs  settings.rs  utils.rs  wiki.rs
docs/: spec-remote-access.md
extension/: manifest.json
extension/background/: service-worker.js
extension/lib/: config.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.js
ios/: project.yml
ios/AtomicMobile/: APIClient.swift  Models.swift
scripts/: build-release.js  dev-server.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apple_notes.rs  event_bridge.rs  http_server.rs  lib.rs  models.rs
src/components/: DatabaseSwitcher.tsx
src/hooks/: useChatEvents.ts  useEmbeddingEvents.ts
src/lib/: api.ts  import-apple-notes.test.ts  import-apple-notes.ts  markdown.ts  platform.ts  tauri.ts
src/stores/: atoms.ts  briefing.ts  (+7 more)
(+129 files in other folders)
